alterações para usar o paginator